<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/day_month_year"
        android:paddingStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_content"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_title"
        app:layout_constraintStart_toStartOf="@+id/edit_text_title"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />

    <EditText
        android:id="@+id/edit_text_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/content"
        android:inputType="textMultiLine"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_date" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_content" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="@+id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toTopOf="@+id/delete_button"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>